zetasql/parser/testdata/rollup.test
SELECT x, SUM(y) FROM T GROUP BY ROLLUP(x);
--
QueryStatement [0-42] [SELECT x,...ROLLUP(x)]
  Query [0-42] [SELECT x,...ROLLUP(x)]
    Select [0-42] [SELECT x,...ROLLUP(x)]
      SelectList [7-16] [x, SUM(y)]
        SelectColumn [7-8] [x]
          PathExpression [7-8] [x]
            Identifier(x) [7-8] [x]
        SelectColumn [10-16] [SUM(y)]
          FunctionCall [10-16] [SUM(y)]
            PathExpression [10-13] [SUM]
              Identifier(SUM) [10-13] [SUM]
            PathExpression [14-15] [y]
              Identifier(y) [14-15] [y]
      FromClause [17-23] [FROM T]
        TablePathExpression [22-23] [T]
          PathExpression [22-23] [T]
            Identifier(T) [22-23] [T]
      GroupBy [24-42] [GROUP BY ROLLUP(x)]
        GroupingItem [33-42] [ROLLUP(x)]
          Rollup [33-42] [ROLLUP(x)]
            PathExpression [40-41] [x]
              Identifier(x) [40-41] [x]
--
SELECT
  x,
  SUM(y)
FROM
  T
GROUP BY ROLLUP(x)

==

SELECT x, y, GROUPING(x) = 1, IF(GROUPING(y) = 0, "foo", "bar")
FROM T GROUP BY ROLLUP(x, y);
--
QueryStatement [0-92] [SELECT x,...ROLLUP(x, y)]
  Query [0-92] [SELECT x,...ROLLUP(x, y)]
    Select [0-92] [SELECT x,...ROLLUP(x, y)]
      SelectList [7-63] [x, y, GROUPING...foo", "bar")]
        SelectColumn [7-8] [x]
          PathExpression [7-8] [x]
            Identifier(x) [7-8] [x]
        SelectColumn [10-11] [y]
          PathExpression [10-11] [y]
            Identifier(y) [10-11] [y]
        SelectColumn [13-28] [GROUPING(x) = 1]
          BinaryExpression(=) [13-28] [GROUPING(x) = 1]
            FunctionCall [13-24] [GROUPING(x)]
              PathExpression [13-21] [GROUPING]
                Identifier(`GROUPING`) [13-21] [GROUPING]
              PathExpression [22-23] [x]
                Identifier(x) [22-23] [x]
            IntLiteral(1) [27-28] [1]
        SelectColumn [30-63] [IF(GROUPING...foo", "bar")]
          FunctionCall [30-63] [IF(GROUPING...foo", "bar")]
            PathExpression [30-32] [IF]
              Identifier(`IF`) [30-32] [IF]
            BinaryExpression(=) [33-48] [GROUPING(y) = 0]
              FunctionCall [33-44] [GROUPING(y)]
                PathExpression [33-41] [GROUPING]
                  Identifier(`GROUPING`) [33-41] [GROUPING]
                PathExpression [42-43] [y]
                  Identifier(y) [42-43] [y]
              IntLiteral(0) [47-48] [0]
            StringLiteral("foo") [50-55] ["foo"]
            StringLiteral("bar") [57-62] ["bar"]
      FromClause [64-70] [FROM T]
        TablePathExpression [69-70] [T]
          PathExpression [69-70] [T]
            Identifier(T) [69-70] [T]
      GroupBy [71-92] [GROUP BY ROLLUP(x, y)]
        GroupingItem [80-92] [ROLLUP(x, y)]
          Rollup [80-92] [ROLLUP(x, y)]
            PathExpression [87-88] [x]
              Identifier(x) [87-88] [x]
            PathExpression [90-91] [y]
              Identifier(y) [90-91] [y]
--
SELECT
  x,
  y,
  `GROUPING`(x) = 1,
  `IF`(`GROUPING`(y) = 0, "foo", "bar")
FROM
  T
GROUP BY ROLLUP(x, y)

==

select x, SUM(y) FROM T GROUP @{hint_name=5} BY ROLLUP(x);
--
QueryStatement [0-57] [select x,...ROLLUP(x)]
  Query [0-57] [select x,...ROLLUP(x)]
    Select [0-57] [select x,...ROLLUP(x)]
      SelectList [7-16] [x, SUM(y)]
        SelectColumn [7-8] [x]
          PathExpression [7-8] [x]
            Identifier(x) [7-8] [x]
        SelectColumn [10-16] [SUM(y)]
          FunctionCall [10-16] [SUM(y)]
            PathExpression [10-13] [SUM]
              Identifier(SUM) [10-13] [SUM]
            PathExpression [14-15] [y]
              Identifier(y) [14-15] [y]
      FromClause [17-23] [FROM T]
        TablePathExpression [22-23] [T]
          PathExpression [22-23] [T]
            Identifier(T) [22-23] [T]
      GroupBy [24-57] [GROUP @{hint_name...ROLLUP(x)]
        Hint [30-44] [@{hint_name=5}]
          HintEntry [32-43] [hint_name=5]
            Identifier(hint_name) [32-41] [hint_name]
            IntLiteral(5) [42-43] [5]
        GroupingItem [48-57] [ROLLUP(x)]
          Rollup [48-57] [ROLLUP(x)]
            PathExpression [55-56] [x]
              Identifier(x) [55-56] [x]
--
SELECT
  x,
  SUM(y)
FROM
  T
GROUP @{ hint_name = 5 } BY ROLLUP(x)

==

select x, y, z, GROUPING (
x)
FROM T
GROUP BY 1, 2, ROLLUP (
x + 2, y = 'foo', z), z, x, ROLLUP(y, x
);
--
QueryStatement [0-102] [select x,...ROLLUP(y, x )]
  Query [0-102] [select x,...ROLLUP(y, x )]
    Select [0-102] [select x,...ROLLUP(y, x )]
      SelectList [7-29] [x, y, z, GROUPING ( x)]
        SelectColumn [7-8] [x]
          PathExpression [7-8] [x]
            Identifier(x) [7-8] [x]
        SelectColumn [10-11] [y]
          PathExpression [10-11] [y]
            Identifier(y) [10-11] [y]
        SelectColumn [13-14] [z]
          PathExpression [13-14] [z]
            Identifier(z) [13-14] [z]
        SelectColumn [16-29] [GROUPING ( x)]
          FunctionCall [16-29] [GROUPING ( x)]
            PathExpression [16-24] [GROUPING]
              Identifier(`GROUPING`) [16-24] [GROUPING]
            PathExpression [27-28] [x]
              Identifier(x) [27-28] [x]
      FromClause [30-36] [FROM T]
        TablePathExpression [35-36] [T]
          PathExpression [35-36] [T]
            Identifier(T) [35-36] [T]
      GroupBy [37-102] [GROUP BY 1...ROLLUP(y, x )]
        GroupingItem [46-47] [1]
          IntLiteral(1) [46-47] [1]
        GroupingItem [49-50] [2]
          IntLiteral(2) [49-50] [2]
        GroupingItem [52-81] [ROLLUP ( x + 2, y = 'foo', z)]
          Rollup [52-81] [ROLLUP ( x + 2, y = 'foo', z)]
            BinaryExpression(+) [61-66] [x + 2]
              PathExpression [61-62] [x]
                Identifier(x) [61-62] [x]
              IntLiteral(2) [65-66] [2]
            BinaryExpression(=) [68-77] [y = 'foo']
              PathExpression [68-69] [y]
                Identifier(y) [68-69] [y]
              StringLiteral('foo') [72-77] ['foo']
            PathExpression [79-80] [z]
              Identifier(z) [79-80] [z]
        GroupingItem [83-84] [z]
          PathExpression [83-84] [z]
            Identifier(z) [83-84] [z]
        GroupingItem [86-87] [x]
          PathExpression [86-87] [x]
            Identifier(x) [86-87] [x]
        GroupingItem [89-102] [ROLLUP(y, x )]
          Rollup [89-102] [ROLLUP(y, x )]
            PathExpression [96-97] [y]
              Identifier(y) [96-97] [y]
            PathExpression [99-100] [x]
              Identifier(x) [99-100] [x]
--
SELECT
  x,
  y,
  z,
  `GROUPING`(x)
FROM
  T
GROUP BY 1, 2, ROLLUP(x + 2, y = 'foo', z), z, x, ROLLUP(y, x)

==

select x FROM T GROUP BY ROLLUP();
--
ERROR: Syntax error: Unexpected ")" [at 1:33]
select x FROM T GROUP BY ROLLUP();
                                ^

==

select x, GROUPING( FROM T GROUP BY x;
--
ERROR: Syntax error: Expected ")" but got keyword FROM [at 1:21]
select x, GROUPING( FROM T GROUP BY x;
                    ^

==

select x, GROUPING FROM T GROUP BY x;
--
ERROR: Syntax error: Expected "(" but got keyword FROM [at 1:20]
select x, GROUPING FROM T GROUP BY x;
                   ^

==

# GROUPING takes a single argument, but this is validated by the resolver.
select x, GROUPING(), GROUPING(x, y, z) FROM T GROUP BY x;
--
QueryStatement [0-57] [select x,...GROUP BY x]
  Query [0-57] [select x,...GROUP BY x]
    Select [0-57] [select x,...GROUP BY x]
      SelectList [7-39] [x, GROUPING...ROUPING(x, y, z)]
        SelectColumn [7-8] [x]
          PathExpression [7-8] [x]
            Identifier(x) [7-8] [x]
        SelectColumn [10-20] [GROUPING()]
          FunctionCall [10-20] [GROUPING()]
            PathExpression [10-18] [GROUPING]
              Identifier(`GROUPING`) [10-18] [GROUPING]
        SelectColumn [22-39] [GROUPING(x, y, z)]
          FunctionCall [22-39] [GROUPING(x, y, z)]
            PathExpression [22-30] [GROUPING]
              Identifier(`GROUPING`) [22-30] [GROUPING]
            PathExpression [31-32] [x]
              Identifier(x) [31-32] [x]
            PathExpression [34-35] [y]
              Identifier(y) [34-35] [y]
            PathExpression [37-38] [z]
              Identifier(z) [37-38] [z]
      FromClause [40-46] [FROM T]
        TablePathExpression [45-46] [T]
          PathExpression [45-46] [T]
            Identifier(T) [45-46] [T]
      GroupBy [47-57] [GROUP BY x]
        GroupingItem [56-57] [x]
          PathExpression [56-57] [x]
            Identifier(x) [56-57] [x]

--
SELECT
  x,
  `GROUPING`(),
  `GROUPING`(x, y, z)
FROM
  T
GROUP BY x
==

select x FROM T GROUP BY ROLLUP(x;
--
ERROR: Syntax error: Expected ")" or "," but got ";" [at 1:34]
select x FROM T GROUP BY ROLLUP(x;
                                 ^
==

select x FROM T GROUP BY ROLLUP x;
--
ERROR: Syntax error: Expected "(" but got identifier "x" [at 1:33]
select x FROM T GROUP BY ROLLUP x;
                                ^
==

select x FROM T GROUP BY ROLLUP;
--
ERROR: Syntax error: Expected "(" but got ";" [at 1:32]
select x FROM T GROUP BY ROLLUP;
                               ^

==

select x FROM T GROUP BY x, y WITH ROLLUP;
--
ERROR: Syntax error: Expected end of input but got keyword WITH [at 1:31]
select x FROM T GROUP BY x, y WITH ROLLUP;
                              ^
==

select `rollup` FROM T GROUP BY `rollup`;
--
QueryStatement [0-40] [select `rollup...BY `rollup`]
  Query [0-40] [select `rollup...BY `rollup`]
    Select [0-40] [select `rollup...BY `rollup`]
      SelectList [7-15] [`rollup`]
        SelectColumn [7-15] [`rollup`]
          PathExpression [7-15] [`rollup`]
            Identifier(`rollup`) [7-15] [`rollup`]
      FromClause [16-22] [FROM T]
        TablePathExpression [21-22] [T]
          PathExpression [21-22] [T]
            Identifier(T) [21-22] [T]
      GroupBy [23-40] [GROUP BY `rollup`]
        GroupingItem [32-40] [`rollup`]
          PathExpression [32-40] [`rollup`]
            Identifier(`rollup`) [32-40] [`rollup`]
--
SELECT
  `rollup`
FROM
  T
GROUP BY `rollup`
